Damim_X_Adi 2:25 8/10/2025 fix the bills and issues